Added a background; centered the canvas

--- a/multiplayer_circles.html
+++ b/multiplayer_circles.html
@@ -3,6 +3,7 @@
 <head>
     <title>Multicircle</title>
     <script src="js/jquery-1.11.2.js"></script>
+    <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 
 <body>
@@ -12,12 +13,6 @@
 <canvas id="canvas1">
     This text is displayed if your browser does not support HTML5 Canvas.
 </canvas>
-
-<style type="text/css">
-    body, html {
-        background-color:rgb(32,32,32);
-    }
-</style>
 
 <script src="js/multi-circles.js"></script>
 <script id="circleMath" src="js/circleMath.js" id="circleMath"></script>
