Fixed physics (I think); problem was that only one client was zeroing out the velocities during changeTurn(). Velocities are now set to zero as soon as the circle is below min velocity. I think I further broke turns in fixing this. Rounded the board corners, played with colors. Put an ugly cursor on the board. Added sound for bumps. Added trajectory lines which indicate when maximum velocity is set. Corrected max velocity calculation.

--- a/multiplayer_circles.html
+++ b/multiplayer_circles.html
@@ -10,10 +10,11 @@
 <input id="send" type="button" value="Test message" />
 <input id="text" /><br />
 <div id="message"></div>
-<canvas id="canvas1">
+cursor: url(http://www.w3schools.com/cssref/smiley.gif);
+<canvas id="canvas1" style="cursor: cell;">
     This text is displayed if your browser does not support HTML5 Canvas.
 </canvas>
-
+<audio id="audio1" src="resources/bump_sound.wav" ></audio>
 <script src="js/multi-circles.js"></script>
 <script id="circleMath" src="js/circleMath.js" id="circleMath"></script>
 
