I had to play with the sounds

--- a/multiplayer_circles.html
+++ b/multiplayer_circles.html
@@ -13,7 +13,10 @@
 <canvas id="canvas1" style="cursor: cell;">
     This text is displayed if your browser does not support HTML5 Canvas.
 </canvas>
-<audio id="audio1" src="resources/bump_sound.wav" ></audio>
+<audio id="audio1" src="resources/1.wav" ></audio>
+<audio id="audio2" src="resources/2.wav" ></audio>
+<audio id="audio3" src="resources/3.wav" ></audio>
+<audio id="audio4" src="resources/4.wav" ></audio>
 <script src="js/multi-circles.js"></script>
 <script id="circleMath" src="js/circleMath.js" id="circleMath"></script>
 
