Added join by game name. Played with css; we could add a button to switch css to different modes (old-school, pastel, etc)

--- a/multiplayer_circles.html
+++ b/multiplayer_circles.html
@@ -7,8 +7,8 @@
 </head>
 
 <body>
-<input id="send" type="button" value="Test message" />
-<input id="text" /><br />
+<input id="send" type="button" class="btn" value="Join game: " />
+<input id="text" value="random"/><br />
 <div id="message"></div>
 <canvas id="canvas1" style="cursor: cell;">
     This text is displayed if your browser does not support HTML5 Canvas.
